[project]
name = "livekit-meeting-agent"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "chromadb>=1.5.5",
    "langchain>=1.2.12",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.19",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.11",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.2",
    "livekit-agents[bey,cartesia,deepgram,hedra,images,openai,silero,turn-detector]~=1.4",
    "livekit-plugins-anam>=1.4.5",
    "livekit-plugins-google>=1.4.5",
    "livekit-plugins-langchain~=1.1",
    "livekit-plugins-noise-cancellation~=0.2",
    "pypdf>=6.8.0",
    "python-dotenv>=1.2.2",
]
